добавление новой строки

--- a/First.ipynb
+++ b/First.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "2cdbe627-6516-415a-b6e7-8266dd752751",
    "metadata": {},
    "outputs": [
@@ -18,17 +18,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\n"
+      "Hello World\n"
      ]
     }
    ],
    "source": [
-    "print('Hello Wor')"
+    "print('Hello World')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "055770c3-bbc4-4862-9398-6674a7c859c0",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,8 +49,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "382df3e7-e864-427d-9aa0-8dd5a89c750b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a меньше b\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=4\n",
+    "b=9\n",
+    "if a==b:\n",
+    "    print(\"Переменные равны\")\n",
+    "elif a>b:\n",
+    "    print(\"a больше b\")\n",
+    "elif a<b:\n",
+    "    print(\"a меньше b\")\n",
+    "else:\n",
+    "    print(\"Не должно быть напечатано\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718689f7-18b0-4157-97d7-01e207845d35",
    "metadata": {},
    "outputs": [],
    "source": []
